# text_completion

./: .gitignore  README.md  dev-requirements.txt  help  install.py  setup.cfg  sonar-scanner.properties  tasks.py
app/: __main__.py
conf/: logging.conf  pipeline.template.conf
notebooks/: batch_completion_analysis.ipynb  chatgpt_git.ipynb  se_parsing_logic.ipynb
scripts/: batch_process.py  cgpt_test.py
src/chatgpt_poc/: __init__.py  csv.py  funcs.py  psql.py
tests/data/wdod/requests/: wdod_request_urls_040322.csv
