[metadata]
name = chatgpt_poc
version = 0.1.0
author = Neel Roshania
author_email = nroshania@gmail.com
description = boiler plate python template
platform = unix, linux, osx, cygwin, win64

[options]
packages =
    chatgpt_poc
install_requires =
    ipykernel
    pandas
    configparser
    boto3
    notebook
    psycopg2
    celery
    kombu
    SQLAlchemy
    numpy
    flower
    openai
    matplotlib
    seaborn
    black==21.7b0
    invoke==1.6.0
    flake8==3.9.2
    pytest==6.2.4
    mypy==0.910
    flake8-import-order==0.18.1
python_requires = >=3.8
package_dir =
    =src
